Sun Oct 15 22:54:26 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - updated documentation for new build system based on Automake and Libtool.
 - fine-tuned configure.in

Sun Oct 15 21:13:49 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - converted build system to automake
 - removed from SVN: files generated by aclocal, autoheader, automake,
   autoconf, configure
 - renamed CREDITS to AUTHORS and CHANGES to ChangeLog, to comply with
   GNU standards
 - removed Makefile.dist, drivers/gendb, drivers/Makefile.drvbuild,
   include/version*
 - moved local autoconf macros to m4/

Sun Sep 24 03:38:25 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - merged report buffer branch into trunk. See log message for 
   revision r274, Thu Nov 24 03:36:14 UTC 2005.

Sun Sep 24 01:49:40 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - path-to-subdriver.sh: added reminder to "make depend"
 - newhidups subdrivers: added #include "main.h" to keep compiler quiet.
 - libusb.c: made all private functions static
 - tripplite_usb.c: use new comm_driver interface to libhid.c

Sat Sep 23 18:23:25 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups: added a shell script scripts/subdriver/path-to-subdriver.sh
   to automatically create a "stub" subdriver from the debugging info
   of "drivers/newhidups -DD -u root -x generic -x vendorid=XXXX auto"

Sat Sep 23 01:39:22 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups.c: fixed array size in upsdrv_initups (potential stack
   corruption). Thanks to Herve Masson for reporting this bug.

Mon Sep 18 23:48:57 EDT 2006 / Charles Lepple <clepple@gmail.com>

 - tripplite_usb: added some more variables for SMARTPRO UPSes, some more
   debugging output, and some variable type cleanup. Driver internal version
   is now 0.7.
 - data/driver.list: note experimental status of non-OMNIVS models, and add
   user report for SMART2200RMXL2U
