@@ -36,7 +36,8 @@ Contents:
  --with-drivers=<driver>,<driver>,...
 
    Specify exactly which driver or drivers to build and install (this
-   works for serial, usb, and snmp drivers).
+   works for serial, usb, and snmp drivers, and overrides the
+   preceding three options).
 
    As of the time of this writing (2006), there are 47 UPS drivers
    available.  Most users will only need one, a few will need two or
@@ -172,9 +173,8 @@ Contents:
 
  --with-drvpath=PATH
 
-   The UPS drivers will be installed to this path.  By default they 
-   install to "bin" under the prefix, giving a default path of
-   /usr/local/ups/bin.
+   The UPS drivers will be installed to this path.  By default they
+   install to "<prefix>/bin", i.e., /usr/local/ups/bin.
 
    The "driverpath" global directive in the ups.conf file overrides this
    at run time.
