@@ -3,3 +3,4 @@ config.h.in
 Makefile
 Makefile.in
 stamp-h1
+stamp-h.in
